Hopefully last fixes

--- a/chapter2.tex
+++ b/chapter2.tex
@@ -38,15 +38,15 @@ The local scale is situated closer to the surface and contains landscape feature
     \label{fig:microscale boundary layer}
 \end{figure}
 
-The microscale usually ranges from a neighbourhood scale to individual street canyons or even microclimates created by individual buildings. It is mayorly influenced by the overall energy balance, which is influenced by cloud coverage, solar radiation and more. Single weather stations are not enough to capture the complex microscale~\cite{oke2004siting}, therefore a dense network of sensors closer to the ground is needed to capture the microscale. Additionally, the microclimate is influenced by \gls{lst}, however the correlation between air and \gls{lst} varies greatly based on other surrounding influences such as wind velocity or humidity~\cite{stoll1992surface}, especially in cases of extreme temperatures~\cite{good2016situ}. The closer the \gls{ta} is measured to the surface, the more local the measurement, therefore \gls{ta} of the canopy is usually measured at 2m height, so the different energy fluxes have enough time to mix and form a more representative average for a bigger area.\\
+The microscale usually ranges from a neighbourhood scale to individual street canyons or even microclimates created by individual buildings. It is mayorly influenced by the overall energy balance, which is influenced by cloud coverage, solar radiation and more. Single weather stations are not enough to capture the complex microscale~\cite{oke2004siting}, therefore a dense network of sensors closer to the ground is needed to capture the microscale. Additionally, the microclimate is influenced by \gls{lst}; however, the correlation between air and \gls{lst} varies greatly based on other surrounding influences such as wind velocity or humidity~\cite{stoll1992surface}, especially in cases of extreme temperatures~\cite{good2016situ}. The closer the \gls{ta} is measured to the surface, the more local the measurement, therefore \gls{ta} of the canopy is usually measured at 2m height, so the different energy fluxes have enough time to mix and form a more representative average for a bigger area.\\
 Vertically, \gls{uhi}s can be divided based on these boundary layers into three mayor types~\cite{oke1976distinction, oke2017urban}, namely \gls{buhi}, \gls{cuhi}, and \gls{suhi}, corresponding to the boundary layer they can be measured in. Another differentiating factor is the time of day at which \gls{uhi}s get detected. For example, Steward~\cite{stewart2011systematic} in his review focussed on night-time \gls{uhi}s, whereas Peng et al.~\cite{peng2012surface} focussed on both day and night-time \gls{uhi}s.
 
 \subsection{Surface Urban Heat Island}
 
 The \gls{lst} is measured directly at the surface of an object and is the main indicator of the \gls{suhi}, which can be found in many cities around the globe~\cite{peng2012surface}. \gls{lst}, in contrast to \gls{ta}, is measured via remote sensing technologies via satellites. Well-known satellites include \gls{modis}~\cite{didan2021modis} (NASA), Sentinel 3 (ESA), Meteosat (EUMETSAT), Landsat, and more. The different satellite types carry different types of instruments and sensors, that can take various measurements. The used sensor has a mayor influence on the quality of data, e.g., resolution via pixel size, robustness against atmospheric influences, ability to handle clouds, and more. In Section~\ref{sec:feature_engineering} we discuss other features next to \gls{lst} that are available via satellite data.\\
-Through the use of satellites, the spatial coverage is great, but raster sizes for older satellites such as \gls{modis} usually range from one to several kilometres, therefore the spatial resolution is not as high. For newer satellites such as Sentinel 2 and Landsat, pixel sizes are improved significantly from 10m to 50m, however complementary data such as derived vegetation indexes are usually not available as precomputed values, adding additional work to the data retrieval process, as later discussed in Section~\ref{subsec: remote sensing}.
-Additionally, weather satellites usually orbit earth to cover wide areas and are not geostationary, therefore only taking measurements a maximum of 1 to 2 times a day, up to every 16 days or even only once a month, depending on the orbit. As a result, the temporal resolution is quite low and especially in the case of \gls{uhi} detection, this could mean that the satellite misses the peak of the \gls{uhi} for a given day or even misses the \gls{uhi} completely. Another downside is the general inability to take \gls{lst} measurements through clouds, therefore even if the satellite passes over during a \gls{uhi}, if there are clouds, the \gls{uhi} cannot be measured. To alleviate the problem there are new methods such as estimating \gls{lst} based on emitted radiation from clouds~\cite{zhang2015estimation}, however they also have their limitations. Lastly, \gls{lst} and \gls{ta} are not the same and can vary greatly, especially in extreme heat events~\cite{good2016situ}.\\
-To conclude, \gls{suhi} analysis can be a good indicator that there is a \gls{uhi} phenomenon present in a city and can generally direct further research, however it lacks the temporal resolution to be used for real-time \gls{uhi} detection and is not able to capture microscale effects of the \gls{uhi}~\cite{voogt2003thermal, voelkel2017towards}.
+Through the use of satellites, the spatial coverage is great, but raster sizes for older satellites such as \gls{modis} usually range from one to several kilometres, therefore the spatial resolution is not as high. For newer satellites such as Sentinel 2 and Landsat, pixel sizes are improved significantly from 10m to 50m; however, complementary data such as derived vegetation indexes are usually not available as precomputed values, adding additional work to the data retrieval process, as later discussed in Section~\ref{subsec: remote sensing}.
+Additionally, weather satellites usually orbit earth to cover wide areas and are not geostationary, therefore only taking measurements a maximum of 1 to 2 times a day, up to every 16 days or even only once a month, depending on the orbit. As a result, the temporal resolution is quite low and especially in the case of \gls{uhi} detection, this could mean that the satellite misses the peak of the \gls{uhi} for a given day or even misses the \gls{uhi} completely. Another downside is the general inability to take \gls{lst} measurements through clouds, therefore even if the satellite passes over during a \gls{uhi}, if there are clouds, the \gls{uhi} cannot be measured. To alleviate the problem there are new methods such as estimating \gls{lst} based on emitted radiation from clouds~\cite{zhang2015estimation}; however, they also have their limitations. Lastly, \gls{lst} and \gls{ta} are not the same and can vary greatly, especially in extreme heat events~\cite{good2016situ}.\\
+To conclude, \gls{suhi} analysis can be a good indicator that there is a \gls{uhi} phenomenon present in a city and can generally direct further research; however, it lacks the temporal resolution to be used for real-time \gls{uhi} detection and is not able to capture microscale effects of the \gls{uhi}~\cite{voogt2003thermal, voelkel2017towards}.
 
 \subsection{Canopy Urban Heat Island}
 
@@ -80,14 +80,14 @@ In recent years, \gls{lcs} in combination with sensor networks have enabled fine
 
 \subsubsection{Stationary Sensors}
 
-There are many different types of environmental features that can be measured directly inside an urban area. The types of measurements that can be observed are among others: \gls{ta}, humidity, atmospheric pressure, reactive gaseous air pollutant (CO, NOx, O$_3$, SO$_2$), \gls{pm}, greenhouse gases (CO$_2$, CH$_4$), precipitation, solar radiation, wind speed and direction, anthropogenic heat, noise, \gls{svf}, heat fluxes and many more.
+There are many different types of environmental features that can be measured directly inside an urban area. The types of measurements that can be observed are among others: \gls{ta}, humidity, atmospheric pressure, reactive gaseous air pollutant (CO, NOx, O$_3$, SO$_2$), \gls{pm}, greenhouse gases (CO$_2$, CH$_4$), precipitation, solar radiation, wind speed and direction, anthropogenic heat, noise, \gls{svf}, heat fluxes, and many more.
 Correlations between these features can vary greatly based on surrounding factors. To better understand these correlations, many empirical studies have studied the influence of meteorological factors on features such as \gls{pm}~\cite{tai2010correlations}. Additionally, many fields of statistics have specialised on topics such as statistics in climatology~\cite{von2002statistical}, geostatistics~\cite{trangmar1986application} and more.\\
 All sensor readings that are taken by physical sensors are singular data points. Additionally, to the type of measurement taken and the actual value observed, physical sensor readings include the physical location of the sensor, e.g., latitude, longitude and sometimes altitude, the type of sensor used to take the measurement, and sampling rates. For \gls{ta}, the sampling rate could be an average temperature measured over five minutes, whereas precipitation might be measured by collecting rain for certain periods of time and then measuring the amount of rain collected. The sensor type is important, as different types of sensors can produce different qualities of measurements, e.g., \gls{lcs} have lower accuracy compared to calibrated reference-grade high-cost sensors and might have lower response rates, and perform better or worse based on the meteorological conditions, e.g., worse performance at low temperatures, high humidity etc. Due to the placement directly inside the environment, (near) real-time observation and high temporal resolution are generally possible but might be influenced by factors such as network availability. The spatial resolution highly depends on the number of sensors deployed and the correct placement of the sensors. The correct placement has a direct influence on the footprint of the sensor~\cite{leclerc2014footprints} and the representativeness of the measurement taken for the underlying and surrounding area~\cite{oke2006guideline}.\\
 One downside of the placement directly in the environment the sensors are observing, is the exposure to environmental influences such as heat, humidity, or pollution, that can decrease the lifetime of a sensor and may require more frequent maintenance or replacement. On example could be that due to pollution in the air, a rain gauge might be cleaned/replaced more often as over time dirt builds up very quickly.
 
 \subsubsection{Mobile Sensors}
 
-Next to stationary sensors such as a \gls{pws}, mobile sensors are not bound to one place, but have the ability to move through the environment they are placed in. This increases the spatial coverage at the cost of temporal resolution, as a sensor is not always in the same place. In the context of urban \gls{ta} sensing, \gls{lcs} could be mounted to moving vehicles such as busses, cars, e-bikes, scooters, and more. This could help improve the spatial coverage of a sensor network. In combination with \gls{ml}-based interpolation, such moving sensors could be used to create virtual sensors for specific locations, where a \gls{ml} model learns the relationship between surrounding sensors so that \gls{ta} could be interpolated for times when a moving sensor is currently not at the specific location. In their study, Yang et al.~\cite{yang2019designing} found that randomly mobile sensor networks outperformed completely stationary sensor networks for measuring monthly mean temperatures, however they had higher errors of up to 5°C when measuring daily maximum temperatures. They suggest that hybrid systems with both stationary and moving sensors are more robust in measuring short extreme events such as heat waves.\\
+Next to stationary sensors such as a \gls{pws}, mobile sensors are not bound to one place, but have the ability to move through the environment they are placed in. This increases the spatial coverage at the cost of temporal resolution, as a sensor is not always in the same place. In the context of urban \gls{ta} sensing, \gls{lcs} could be mounted to moving vehicles such as busses, cars, e-bikes, scooters, and more. This could help improve the spatial coverage of a sensor network. In combination with \gls{ml}-based interpolation, such moving sensors could be used to create virtual sensors for specific locations, where a \gls{ml} model learns the relationship between surrounding sensors so that \gls{ta} could be interpolated for times when a moving sensor is currently not at the specific location. In their study, Yang et al.~\cite{yang2019designing} found that randomly mobile sensor networks outperformed completely stationary sensor networks for measuring monthly mean temperatures; however, they had higher errors of up to 5°C when measuring daily maximum temperatures. They suggest that hybrid systems with both stationary and moving sensors are more robust in measuring short extreme events such as heat waves.\\
 Next to mobile sensor networks, official weather services such as the \gls{dwd} also do temperature profile measurements~\footnote{\url{https://www.dwd.de/DE/service/lexikon/Functions/glossar.html?lv2=101996&lv3=102106}, \textit{last accessed: 23.08.2023}}, where sensors are mounted to a car to capture \gls{ta}, humidity, wind speed and direction, as well as possibly atmospheric pressure. This data can be used to support research into local climates. Especially interesting for these profile drives are `summer cloud-free and light-windy high-pressure weather conditions, as then temperature differences between the city and the surrounding area become particularly pronounced and temperature-equalising cold air flows reach their greatest intensity.'~\footnote{\url{https://www.dwd.de/DE/forschung/klima\_umwelt/klimawirk/stadtpl/projekt\_warmeinseln/projekt\_waermeinseln\_node.html}, \textit{last accessed: 23.08.2023}}.
 
 \subsection{Application Layer}
@@ -124,8 +124,8 @@ Point interpolation methods can either be exact, meaning that the original data 
 
 \subsection{Exact Point Interpolation}
 
-Exact point interpolation methods have the benefit that the original data points are preserved. Fitting the original data points to a polynomial is the simplest form of interpolation, however it has the mayor drawback that there are no additional constraints for points that are not part of the original data set, potentially resulting in highly unreasonable estimations.\\
-The main idea of weighting methods is the idea to assign more weight to data points that are closer than points that are further away. Due to its simplicity and fast computation, \gls{idw}~\cite{willmott1985small} is a popular and commonly used interpolation method. The main downside with \gls{idw} is that it is a smoothing technique, therefore it is not able to capture local maxima and minima, which could be critical for \gls{uhi} detection. Splines~\cite{mitavs1988general}, another exact smoothing technique, is a mathematical method that fits either a smooth curve or surface to a set of given points. It offers several advantages such as smoothness and retention of small-scale features, however this method can be computationally expensive and might not be best suited for highly irregular data points, e.g., big differences between data points located very close to each other. Finite Difference is a method to calculate a surface based on a set of differential equations, which can calculate a smooth surface from the given points, however at the cost of higher computational cost to solve the differential equations iteratively.\\
+Exact point interpolation methods have the benefit that the original data points are preserved. Fitting the original data points to a polynomial is the simplest form of interpolation; however, it has the mayor drawback that there are no additional constraints for points that are not part of the original data set, potentially resulting in highly unreasonable estimations.\\
+The main idea of weighting methods is the idea to assign more weight to data points that are closer than points that are further away. Due to its simplicity and fast computation, \gls{idw}~\cite{willmott1985small} is a popular and commonly used interpolation method. The main downside with \gls{idw} is that it is a smoothing technique, therefore it is not able to capture local maxima and minima, which could be critical for \gls{uhi} detection. Splines~\cite{mitavs1988general}, another exact smoothing technique, is a mathematical method that fits either a smooth curve or surface to a set of given points. It offers several advantages such as smoothness and retention of small-scale features; however, this method can be computationally expensive and might not be best suited for highly irregular data points, e.g., big differences between data points located very close to each other. Finite Difference is a method to calculate a surface based on a set of differential equations, which can calculate a smooth surface from the given points; however, at the cost of higher computational cost to solve the differential equations iteratively.\\
 Kriging, a geostatistical interpolation method, originally developed by Krige~\cite{krige1976review} as a moving averaging technique to reduce global biases, has developed into one of the most prominent spatial interpolation methods and has seen many contributions and improvements since the introduction of \gls{ok} and Universal Kriging~\cite{li2014spatial}.
 
 \subsubsection{Kriging}
