--- a/chapter4.tex
+++ b/chapter4.tex
@@ -18,7 +18,7 @@ As meteorological research and analysis activities are usually in need of gridde
     \item \gls{ml}-based interpolation for a single location to interpolate timeframes with missing data or to simulate a higher temporal resolution that does not only interpolate between individual data points of the same sensor, but also takes into consideration surrounding sensors
 \end{itemize}
 
-Research suggests that for fine-granular spatio-temporal urban \gls{ta} maps, a sensor density of at least 1 sensor per km$^{2}$ is needed~\cite{venter2020hyperlocal}, however the denser the sensor network the better the prediction quality, as even inside a single street canyon \gls{ta} can easily vary by 2 to 3°C~\cite{sugawara2008temperature}.
+Research suggests that for fine-granular spatio-temporal urban \gls{ta} maps, a sensor density of at least 1 sensor per km$^{2}$ is needed~\cite{venter2020hyperlocal}; however, the denser the sensor network the better the prediction quality, as even inside a single street canyon \gls{ta} can easily vary by 2 to 3°C~\cite{sugawara2008temperature}.
 To achieve this sensor density as well as to gain insights into previously unobserved areas and to minimise prediction uncertainty for those areas, hybrid approaches combining stationary and moving sensors have shown to work better than purely stationary networks by covering more ground as well as reducing variability of purely mobile network setups in the context of urban temperature sensing~\cite{yang2019designing}. The combination of reference grade stationary sensors and moving sensors also shows promise in other related application, e.g., in the context of pollution island detection~\cite{iyer2022modeling}.\\
 In the context of this work, we discuss both \gls{ml} applications and try to show the feasibility and potentials of \gls{ml}-based interpolation in the context of urban \gls{ta} sensing.
 In the following, we introduce several \gls{ml} algorithms that can be used for regression tasks and discuss how they need to be adapted to solve interpolation tasks as well as the advantages and disadvantages of each model. The models will be implemented as prototypes and evaluated in Chapter~\ref{chap:Evaluation}.
@@ -38,7 +38,7 @@ Next to the adaptations that need to be made to fit regression algorithms to the
 
 \begin{itemize}
     \item \textbf{Model Assumptions:} The model assumptions need to be met by the features used in the input data. For example, linear regression assumes that the input features are independent from each other, as linear regression measures the amount the target variable is influenced by one feature changing while all other features stay the same. In case of correlation, this assumption is violated, as for example the amount of precipitation influences the humidity. Other assumptions could be made about the distribution of data, the mean of values, etc.
-    \item \textbf{Accuracy and Reliability:} Creating an accurate and reliable model is important to increase the trust for predicted values, however there are certain trade-offs to be made, as model performance or generalisation ability are also important factors to consider.
+    \item \textbf{Accuracy and Reliability:} Creating an accurate and reliable model is important to increase the trust for predicted values; however, there are certain trade-offs to be made, as model performance or generalisation ability are also important factors to consider.
     The accuracy of the model is mainly determined how well the chosen model can fit the underlying data, e.g., a linear model cannot fit a non-linear function, and is measured by the evaluation metrics described in Section~\ref{sec:validation methodology}.
     The reliability of the model is determined by the training data as well as the model architecture, as for example training data that is not representative of the underlying function can introduce bias into the model or can prevent the model from learning the correct function. Another important factor is the data quality, as more noise can result in worse model performance. Lastly, reliability of the model is also determined by the ability of the model to handle missing or sparse data as well as outliers. This is especially important in our context as we try to integrate moving sensors into the interpolation process, which sense data at different times and locations.
     \item \textbf{Extrapolation Capabilities:} One important factor to consider, especially when using a model with previously unseen data, is the ability to extrapolate data. Linear regression models as an example try to fit a linear function that can be easily used with data that is bigger/smaller than previously seen training data as the function is continuous. In comparison, regression trees by default do not allow for extrapolation. Also, \gls{ann}s typically perform unpredictably on unseen data.
@@ -47,7 +47,7 @@ Next to the adaptations that need to be made to fit regression algorithms to the
     \item \textbf{Handling of Sparse Data:} Like missing data, handling of sparse data is also important to prevent problems such as the \gls{nan} problem mentioned previously. The main difference to missing data is that sparse data is not missing, but rather not always available. In our context, moving sensors would be an example for sparse data, as they only sense data at certain times and locations. The strategies to handle missing data are also similar to those of missing data, but imputation and interpolation are more common strategies to handle sparse data.
     \item \textbf{Model Performance:} The more complex a model is, the more training data is needed to fine-tune all its weights and the longer it takes to train, either due to the amount of data or the number of steps that need to be taken when updating weights in the training process. In the context of open-source and citizen participation less complex models are preferred, as they can be trained and deployed with less resources. However, a less complex model could have the downside of not being able to fit the underlying data as well as a more complex model, therefore there is a trade-off between model complexity and model performance. Another factor is the capability of handling many locations and data points, as some models' performance degrades significantly when the amount of data points increases, as well as the ability to handle high-dimensional data.
     \item \textbf{Model Capabilities vs. Interpretability:} A common trade-off in \gls{ml} models is between model capabilities and complexity and interpretability of the model as done by~\cite{zumwald2021mapping}, as `Neural network and deep learning approaches allow for large flexibility and predictive power but are harder to interpret than ensemble-based approaches which allow for the required flexibility, while still providing insights into the algorithms' inner workings, e.g., via variable importance and prediction uncertainty estimation'.
-    \item \textbf{Other:} Next to these main requirements, there are also other requirements, such as the ability the handle massive amounts of data, live retraining, or sophisticated support via \gls{ml} libraries such as \textit{Tensor Flow}~\footnote{\url{https://www.tensorflow.org/}} for commercial use cases. Due to the limited scope of this work, these requirements will be considered in less detail.
+    \item \textbf{Other:} Next to these main requirements, there are also other requirements, such as the ability the handle massive amounts of data, live retraining, or sophisticated support via \gls{ml} libraries such as \textit{Tensor Flow}~\footnote{\url{https://www.tensorflow.org/}, \textit{last accessed: 01.09.2023}} for commercial use cases. Due to the limited scope of this work, these requirements will be considered in less detail.
 \end{itemize}
 
 After introducing the requirements for model adaptions and selection, the next step is to introduce and compare the different \gls{ml} regression algorithms.
@@ -63,7 +63,7 @@ In regression analysis, the goal is to predict a (continuous) target variable $y
     \item (Deep) Neural Networks
 \end{itemize}
 
-Next to these algorithms, there also exist less popular interpolation methods, such as outlined in~\cite{li2014spatial}, however due to the limited scope of this work, we only take a look at \gls{ml} models listed above, who are implemented in the popular \textit{sklearn} \gls{ml} library~\cite{scikit-learn}.
+Next to these algorithms, there also exist less popular interpolation methods, such as outlined in~\cite{li2014spatial}; however, due to the limited scope of this work, we only take a look at \gls{ml} models listed above, who are implemented in the popular \textit{sklearn} \gls{ml} library~\cite{scikit-learn}.
 Each model has certain benefits but also comes with drawbacks or special assumptions for the input data to the model. First, we will discuss each model and then compare these assumptions with the data coming from the data-layer, to identify suitable models for the task of \gls{ta} interpolation.
 Based on the domain, there already exist proposed best practices for which algorithms to use for what applications. In the context of Smart Cities such recommendations exist for topics such as intelligent transportation systems, smart grids, smart city health care and more can be found in~\cite{ullah2020applications}, which does not cover interpolation. In the context of \gls{ta} interpolation, regression forests and \gls{hgb} seem to be popular choices and perform better compared to other methods~\cite{apaydin2022evaluation, ho2014mapping}.
 
@@ -118,7 +118,7 @@ Hengl et al.~\cite{hengl2018random} adapted the \gls{rf} algorithm to take advan
     \item Resistance distances or weighted buffer distances
 \end{itemize}
 
-They found that only using coordinates resulted in lower \gls{r2} and higher \gls{mse} errors compared to distances between sampling locations, and concluded that \gls{rfsp} performed similar to \gls{ok}, however without the downsides of needing to create and fit a variogram, no manual trend building, no need to define a search radius for Kriging, no transformation of the target variable, spatial autocorrelation and correlation with spatial environmental factors are modelled together, and variable importance shows which observations and covariants have the most influence on the predictions. They described the advantages of \gls{rf} as follows:
+They found that only using coordinates resulted in lower \gls{r2} and higher \gls{mse} errors compared to distances between sampling locations, and concluded that \gls{rfsp} performed similar to \gls{ok}; however, without the downsides of needing to create and fit a variogram, no manual trend building, no need to define a search radius for Kriging, no transformation of the target variable, spatial autocorrelation and correlation with spatial environmental factors are modelled together, and variable importance shows which observations and covariants have the most influence on the predictions. They described the advantages of \gls{rf} as follows:
 
 \begin{itemize}
     \item Information overlap (multicollinearity) and over-parametrization are not a problem. \gls{rf} can even be trained with more covariants than observations.
@@ -146,7 +146,7 @@ Both~\cite{zumwald2021mapping, zhang2012bias} found that there seems to be a sys
 
 \subsection{Histogram-Based Gradient Boosting}
 
-Similar to \gls{rf}s, \gls{hgb} is an ensemble-based estimator that combines multiple estimators, in this case gradient boosting decision trees, and averages the results to get a more robust estimation. Compared to \gls{rf}s, \gls{hgb} as implemented by sklearn~\footnote{\url{https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.HistGradientBoostingRegressor.html}, \textit{last accessed: 25.08.2023}} based on LightGBM~\cite{ke2017lightgbm}, should have better performance, especially for bigger datasets and higher dimensional features, has built-in support for missing values which simplifies data pre-processing steps, and finally seems to slightly outperform \gls{rf} according to the sklearn documentation~\footnote{\url{https://scikit-learn.org/stable/auto\_examples/ensemble/plot\_forest\_hist\_grad\_boosting\_comparison.html}} and other studies~\cite{apaydin2022evaluation}.
+Similar to \gls{rf}s, \gls{hgb} is an ensemble-based estimator that combines multiple estimators, in this case gradient boosting decision trees, and averages the results to get a more robust estimation. Compared to \gls{rf}s, \gls{hgb} as implemented by sklearn~\footnote{\url{https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.HistGradientBoostingRegressor.html}, \textit{last accessed: 25.08.2023}} based on LightGBM~\cite{ke2017lightgbm}, should have better performance, especially for bigger datasets and higher dimensional features, has built-in support for missing values which simplifies data pre-processing steps, and finally seems to slightly outperform \gls{rf} according to the sklearn documentation~\footnote{\url{https://scikit-learn.org/stable/auto\_examples/ensemble/plot\_forest\_hist\_grad\_boosting\_comparison.html}, \textit{last accessed: 01.09.2023}} and other studies~\cite{apaydin2022evaluation}.
 
 \subsubsection{Bagging Methods}
 
@@ -163,7 +163,7 @@ To decrease the variance of a single tree predictor, bagging is used to introduc
 
 \subsection{Support Vector Machine Regression}
 
-\gls{svm}s are typically used in classification problems however they can be also used for regression problems, called \gls{svr}. \gls{svm}s transform the input data into a higher dimensional space and try to find a hyperplane that separates the data into two classes. This approach is similar to linear regression, however \gls{svm}s are more robust to outliers and can be used for non-linear problems. Depending on the Kernel function used, e.g., Linear, Polynomial, \gls{rbf}, or Sigmoid, the model can suffer from the same problems as linear regression when dealing with correlated spatial data.
+\gls{svm}s are typically used in classification problems however they can be also used for regression problems, called \gls{svr}. \gls{svm}s transform the input data into a higher dimensional space and try to find a hyperplane that separates the data into two classes. This approach is similar to linear regression; however, \gls{svm}s are more robust to outliers and can be used for non-linear problems. Depending on the Kernel function used, e.g., Linear, Polynomial, \gls{rbf}, or Sigmoid, the model can suffer from the same problems as linear regression when dealing with correlated spatial data.
 As a result, appropriate counter measures need to be taken, such as using the Mahalanobis distance instead of the Euclidean distance for \gls{rbf} kernels~\cite{kamada2006support}, which converts correlated features into uncorrelated features.
 
 \subsection{Neural Networks}
