--- a/chapter8.tex
+++ b/chapter8.tex
@@ -23,9 +23,9 @@ All \gls{ml} models are implemented using Python and the scikit-learn library~\c
 
 To validate the different models, we use the following methodology:\\
 We evaluate two locations based on data availability, e.g., Hamburg and Stuttgart, that also have slightly different climate characteristics, although both are located in Germany in a moderate cool climatic zone, with Hamburg located near the coast in rather Maritim climate and Stuttgart located more inland in a continental climate. Hamburg has also higher precipitation and wind compared to Stuttgart.
-For both locations, we collected \gls{pws} data from Netatmo and Sensor.Community, however Netatmo data is only available for the whole month of June 2023 for Hamburg and for a single timestep on 19. June 2023 14h for Stuttgart, while Sensor.Community data is available for the whole months of January and June 2023 for both locations.\\
+For both locations, we collected \gls{pws} data from Netatmo and Sensor.Community; however, Netatmo data is only available for the whole month of June 2023 for Hamburg and for a single timestep on 19. June 2023 14h for Stuttgart, while Sensor.Community data is available for the whole months of January and June 2023 for both locations.\\
 For both locations for both interpolation use cases, we first compare all available models, e.g., Linear Regression, \gls{knn}, \gls{rf}, \gls{svr}, and \gls{hgb}, with all features against each other to get an understanding of the overall performance of the models and maximum achievable potential, given the assumption that more features generally improve prediction quality. The datasets are split into a training and test set. 70\% of the data is used for training and 30\% is completely withhold for testing. The training and test set are split randomly. The same split is used for all models and sensors to ensure comparability.
-Afterwards, the most promising model with the lowest error is used to further evaluate specific influences such as distances between neighbours or the amount of training data and time intervals. For the further evaluation, 5-Fold Cross Validation is used to reduce the risk of overfitting~\cite{kohavi1995study}. We note here that a k of 10 would be preferred, however due to the computational overhead we only use a k of 5 for exploration.\\
+Afterwards, the most promising model with the lowest error is used to further evaluate specific influences such as distances between neighbours or the amount of training data and time intervals. For the further evaluation, 5-Fold Cross Validation is used to reduce the risk of overfitting~\cite{kohavi1995study}. We note here that a k of 10 would be preferred; however, due to the computational overhead we only use a k of 5 for exploration.\\
 All \gls{ml} models in the initial evaluation are trained using the default parameters as defined in the scikit-learn library. The only exception is the number of estimators for the \gls{rf} Regressor and the number of iterations for the \gls{hgb} Regressor, which are both increased from 100 to 200 to improve the performance of the models as found out by previous exploration. To get the best possible performance of each model, an exhaustive grid search would be preferred for all models to fine-tune all hyperparameters; however, due to the computational overhead of running exhaustive grid searches, this is not feasible in the scope of this work.\\
 For the error metrics, the following candidates are available: \gls{mse}, MAE, \gls{rmse}, \gls{r2}. \gls{mse} is the most used error metric and is more sensitive to outliers, whereas MAE punishes outliers less but is therefore also more variable. Related work commonly uses \gls{rmse} as it has the same unit as the response variable, therefore \gls{rmse} is used as the main error metric. \gls{r2} is additionally used to get an understanding of the variance of the model.
 
@@ -54,7 +54,7 @@ Gradient Boosting shows the lowest \gls{rmse} starting with over 10 neighbours a
 
 \subsection{Further Evaluation - Gradient Boosting}
 
-HistGradientBoostingRegressor without imputation achieves overall the lowest \gls{rmse} starting with more than 10 neighbours and continuously improves with more neighbours; however, the improvements after 30 neighbours are small. This model is great because it has native \gls{nan} support and we can save the imputation step that can possibly introduce bias into the model. The difference to \gls{knn} and \gls{rf} is not that big with a little less than \gls{rmse} of 0.1, however the confidence interval is also smaller compared to the other models. Due to the lowest error and performance benefits compared to other models such as \gls{rf}s and no need to use imputation, the HistGradientBoostingRegressor is used in the following section to further investigate feature importance, the influence of different time intervals and the impact of \gls{qc} on the process.\\
+HistGradientBoostingRegressor without imputation achieves overall the lowest \gls{rmse} starting with more than 10 neighbours and continuously improves with more neighbours; however, the improvements after 30 neighbours are small. This model is great because it has native \gls{nan} support and we can save the imputation step that can possibly introduce bias into the model. The difference to \gls{knn} and \gls{rf} is not that big with a little less than \gls{rmse} of 0.1; however, the confidence interval is also smaller compared to the other models. Due to the lowest error and performance benefits compared to other models such as \gls{rf}s and no need to use imputation, the HistGradientBoostingRegressor is used in the following section to further investigate feature importance, the influence of different time intervals and the impact of \gls{qc} on the process.\\
 
 \begin{figure}[htp]
     \centering
@@ -77,7 +77,7 @@ The evaluation is done using 5-fold cross validation for a subset of 10 stations
 \subsubsection{Feature Importance}
 
 Next to the temperature, there are also other features that could be included in the prediction process such as the time, humidity, pressure, etc. In order to understand how much the features contribute to the overall prediction quality, we first compare the \gls{rmse} of the model with only the temperature as input feature for each neighbour, and then test with adding time, humidity, pressure, and finally all features combined. Time is only a single column of the transformed timestamp, whereas humidity and pressure are added for each neighbour. In the end the input looks as follows: [ta$_1$... ta$_n$, time, humidity$_1$... humidity$_n$, pressure$_1$... pressure$_n$]\\
-Figure~\ref{fig:eval feature importance 10 stations single location} shows the \gls{rmse} for different features for 10 stations in Hamburg with 30 neighbours. We can clearly see, that there is no visible difference between only temperature and all features combined, therefore in Figure~\ref{fig:eval permutation importance single station} we take a look at the permutation importance of a single station for temperature and time on a 30\% test set. The values are calculated based on the trained regressors from the 5 different folds of the cross validation, however the test set was always the same and not the same used during the cross-validation, due to technical limitations in the sklearn library. However, the results indicates that only a very small number of stations, in this case the neighbours 4 and 13, have a high influence on the prediction quality. All other stations have a very low influence on the prediction quality, with time having no visible influence at all. This is a very interesting result, as it indicates that the model only needs a handful of neighbours that have similar temperature distributions to the target station in order to make a good prediction. Other features such as time, humidity and pressure do not seem to have any influence on the prediction quality, and could therefore be ignored, saving computational resources and making the model more robust. This assumption could be further validated by looking at more stations and their permutation importance.\\ 
+Figure~\ref{fig:eval feature importance 10 stations single location} shows the \gls{rmse} for different features for 10 stations in Hamburg with 30 neighbours. We can clearly see, that there is no visible difference between only temperature and all features combined, therefore in Figure~\ref{fig:eval permutation importance single station} we take a look at the permutation importance of a single station for temperature and time on a 30\% test set. The values are calculated based on the trained regressors from the 5 different folds of the cross validation; however, the test set was always the same and not the same used during the cross-validation, due to technical limitations in the sklearn library. However, the results indicates that only a very small number of stations, in this case the neighbours 4 and 13, have a high influence on the prediction quality. All other stations have a very low influence on the prediction quality, with time having no visible influence at all. This is a very interesting result, as it indicates that the model only needs a handful of neighbours that have similar temperature distributions to the target station in order to make a good prediction. Other features such as time, humidity and pressure do not seem to have any influence on the prediction quality, and could therefore be ignored, saving computational resources and making the model more robust. This assumption could be further validated by looking at more stations and their permutation importance.\\ 
 
 \begin{figure}[htp]
     \centering
@@ -107,7 +107,7 @@ For this test, we use \gls{hgb} without imputed data with 30 neighbours across o
 
 % Inplicitly included via \gls{qc} process, because many values are already missing -> check for subset with more data available how missing values influence the model
 
-Sensor networks have the advantage, compared to remote sensing approaches, that they provide high temporal resolutions, however at the cost of spatial coverage. In the context of \gls{ta} sensing, \gls{ta} sensors could be mounted to busses, cars, scooters, or bikes to increase the spatial coverage of the sensor network. Unfortunately, there are currently no datasets of actual moving sensors available; however, we can simulate a non-stationary sensor by removing data points of specific sensors in either a fixed interval, e.g., simulating a bus line that visits a certain location in a rather fixed interval, or randomly, simulating a bike or scooter that is used periodically.\\
+Sensor networks have the advantage, compared to remote sensing approaches, that they provide high temporal resolutions; however, at the cost of spatial coverage. In the context of \gls{ta} sensing, \gls{ta} sensors could be mounted to busses, cars, scooters, or bikes to increase the spatial coverage of the sensor network. Unfortunately, there are currently no datasets of actual moving sensors available; however, we can simulate a non-stationary sensor by removing data points of specific sensors in either a fixed interval, e.g., simulating a bus line that visits a certain location in a rather fixed interval, or randomly, simulating a bike or scooter that is used periodically.\\
 We have already indirectly simulated missing data by applying \gls{qc} steps before using the station data to train the models, as seen in Section~\ref{sec:quality control}, where we lose quite some data. An interesting exploration could be to use the previous sensor with Netatmo Station Id \textit{70ee:50:83:b1:e2} and choose neighbours that have a high influence on the prediction quality, e.g., neighbour 4 and 13, and remove data points in both fixed and random intervals to simulate a moving sensor instead of a stationary sensor. We could also check what happens, if not only two but multiple neighbours are turned into simulated moving sensors.\\
 
 \begin{figure}[ht]
