--- a/chapter5.tex
+++ b/chapter5.tex
@@ -4,10 +4,10 @@
 
 Next to the \gls{ml} model selected, the data used to train and evaluate the model has a major influence on its performance. If the data is not representative or information is missing about the underlying process that the model should be fitted to, there can be errors, bias, or an inability to generalize well to new data. In this chapter, we look at potential features for \gls{ta}, at data sources for these features, and discuss the construction process of the datasets used in this work.\\
 % Overall dataset availability
-In the field of natural language processing and computer vision, there is an abundance of large available datasets which have a big contribution to the advancements in the field, like annotated datasets as provided by Google Research~\footnote{\url{https://research.google/resources/datasets/}, \textit{last accessed: 05.08.2023}}. In comparison in the field of climate research, there are also many datasets, including satellite data, weather station data, and climate model data, however they are highly distributed or often not openly available. Platforms such as \gls{gee}~\cite{gorelick2017google} try to address this issue, however the dataset catalogue~\footnote{\url{https://developers.google.com/earth-engine/datasets}, \textit{last accessed: 05.08.2023}} is still limited and does not include datasets offered by local authorities or other research institutions, such as universities.\\
+In the field of natural language processing and computer vision, there is an abundance of large available datasets which have a big contribution to the advancements in the field, like annotated datasets as provided by Google Research~\footnote{\url{https://research.google/resources/datasets/}, \textit{last accessed: 05.08.2023}}. In comparison in the field of climate research, there are also many datasets, including satellite data, weather station data, and climate model data; however, they are highly distributed or often not openly available. Platforms such as \gls{gee}~\cite{gorelick2017google} try to address this issue; however, the dataset catalogue~\footnote{\url{https://developers.google.com/earth-engine/datasets}, \textit{last accessed: 05.08.2023}} is still limited and does not include datasets offered by local authorities or other research institutions, such as universities.\\
 % How does the perfect dataset for \gls{ta} look like?
 For the specific use case of temperature interpolation in urban areas, an optimal dataset would contain high spatial and temporal resolution sensor data, e.g., a high sensor density and a low time interval of for example five to ten minutes. Additionally, the sensor placement and sensor quality have a high influence on the accuracy of the sensor readings~\cite{oke2006guideline}, therefore the correct placement and calibration of the sensors needs to be guaranteed. Such requirements are not met by traditional weather station networks as the spatial coverage is too low, as a single weather station is not enough to capture the urban microclimate~\cite{oke2017urban}. The weather station locations of the \gls{dwd} are shown in figure~\ref{fig:dwd sensor locations germany}, which shows that usually at most one weather station is available per city. The weather stations however offer a high temporal resolution in addition to very high-quality sensors, which is why they can be used as reference stations for quality control of other sensors, as discussed in section~\ref{sec:quality control}.\\
-A solution to the problem of low spatial coverage is the usage of sensor networks. There are several projects that run dense urban-climate monitoring networks~\cite{muller2013sensors} such as the Helsinki Testbed~\cite{koskinen2011helsinki} or the Birmingham Urban Climate Laboratory~\cite{warren2016birmingham}, however access to those datasets is limited, for example due to outdated links or the need to request access. Due to the high cost of running such dense sensor networks with high sensor and maintenance costs, professionally run sensor networks are rare and are often only run for a limited period until project funds run out.\\
+A solution to the problem of low spatial coverage is the usage of sensor networks. There are several projects that run dense urban-climate monitoring networks~\cite{muller2013sensors} such as the Helsinki Testbed~\cite{koskinen2011helsinki} or the Birmingham Urban Climate Laboratory~\cite{warren2016birmingham}; however, access to those datasets is limited, for example due to outdated links or the need to request access. Due to the high cost of running such dense sensor networks with high sensor and maintenance costs, professionally run sensor networks are rare and are often only run for a limited period until project funds run out.\\
 As an alternative, sensor networks can also be crowdsourced and run by citizens, distributing the cost of individual sensors as well as maintenance costs among many. Especially with advances in sensor technologies, lost cost and compact sensors are more affordable than ever while still providing good data quality~\cite{grimmond2006progress, rundel2009environmental}. In the context of meteorological data, such sensor networks are often referred to as \gls{pws}~\cite{meier2017crowdsourcing} or \gls{pws}~\cite{hahn2022observations} networks. In this work, we use the term \gls{pws}.\\
 The main downside of this approach is the lack of quality control and meta data, as the sensors are usually placed by non-professionals in suboptimal locations, e.g., in direct sunlight or too close to walls, leading to incorrect readings or bias in the data. A lack in meta data can also lead to issues, if for example exact positions of the sensors are not known and information about the height of the sensor above ground is missing. However, other concerns such as data privacy also need to be accounted for, as such weather stations are often placed on private property.\\
 In this work, data from \gls{pws} networks is used to create datasets for the training and evaluation of \gls{ml} models for \gls{ta} interpolation. In the following sections, we look at available \gls{pws} providers and their data and potential features for \gls{ta} interpolation, discuss additional pre-processing steps such as quality control or sensor height correction, and finally discuss the construction of the datasets used in this work.
@@ -47,7 +47,7 @@ Overall, there are around 11.738 active sensors~\footnote{as of 24.06.2023}. Of 
 \subsection{Netatmo}
 
 Netatmo~\footnote{\url{https://www.netatmo.com/en-eu}} is a French company that sells smart-home devices including outdoor weather stations, indoor sensors for air quality, as well as other products such as smart cameras. They host a weather map~\footnote{\url{https://weathermap.netatmo.com/}, \textit{last accessed: 06.08.2023}} where customers can share their outdoor weather station data. They provide an API to access current weather station data as well historic data from individual outdoor sensors and modules.
-They provide their historical and current weather data for commercial partners or partners in the research and education sector. They are part of the \gls{eumetnet} project~\footnote{\url{https://www.eumetnet.eu/}, \textit{last accessed: 06.08.2023}} which is a network of 31 European meteorological and hydrological services. The project aims to facilitate the exchange of weather data and to improve the quality of weather forecasts, especially in the context of \gls{pws}~\cite{hahn2022observations}. There are currently no openly historical datasets available from Netatmo data, only private datasets~\footnote{\url{https://catalogue.ceda.ac.uk/uuid/e8793d74a651426692faa100e3b2acd3}, \textit{last accessed: 06.08.2023}} that are only available for partners such as \gls{eumetnet} members. They offer an educational program~\footnote{\url{https://www.netatmo.com/en-eu/weather-with-netatmo}} to access temporally and spatially limited amounts of data that is usually only available to commercial partners.
+They provide their historical and current weather data for commercial partners or partners in the research and education sector. They are part of the \gls{eumetnet} project~\footnote{\url{https://www.eumetnet.eu/}, \textit{last accessed: 06.08.2023}} which is a network of 31 European meteorological and hydrological services. The project aims to facilitate the exchange of weather data and to improve the quality of weather forecasts, especially in the context of \gls{pws}~\cite{hahn2022observations}. There are currently no openly historical datasets available from Netatmo data, only private datasets~\footnote{\url{https://catalogue.ceda.ac.uk/uuid/e8793d74a651426692faa100e3b2acd3}, \textit{last accessed: 06.08.2023}} that are only available for partners such as \gls{eumetnet} members. They offer an educational program~\footnote{\url{https://www.netatmo.com/en-eu/weather-with-netatmo}, \textit{last accessed: 01.09.2023}} to access temporally and spatially limited amounts of data that is usually only available to commercial partners.
 
 % precisions
 % Please add the following required packages to your document preamble:
@@ -71,7 +71,7 @@ Rainfall       & mm/h    & 0.2 to 150 mm/h        & 1mm/h   & every 5 min (bucke
 
 In the context of collecting meteorological data, the smart weather products are of particular interest. These include a smart outdoor weather station that collects \gls{ta}, humidity and air pressure, an anemometer that collects wind speed and direction, and a rain gauge. The sensor specifications, as reported by the vendor himself, is reported in Table~\ref{tab: netatmo sensor specs}.\\
 In this work, data from Netatmo stations is used as Netatmo offers many sensors in Germany in urban areas, exemplified by Figure~\ref{fig:netatmo sensor locations hamburg} for the region of Hamburg, and by Figure~\ref{fig:netatmo sensor locations stuttgart} for the region of Stuttgart.
-The developer portal~\footnote{\url{https://dev.netatmo.com/apidocumentation}} offers a way to programmatically access all public sensor measurements via a REST API, however each request has a limit on the spatial extend of the requested area for the current weather data. For historic data, the limit per request per sensor is 1024 data points. The API has a tight rate limit per application. For applications below 100 users, the rate limit is 2000 requests every hour and 200 requests every 10 seconds across all users, and 500 requests every hour and 50 requests every 10 seconds per user~\footnote{\url{https://dev.netatmo.com/guideline\#rate-limits}, \textit{last accessed: 06.08.2023}}. In this work, we use the REST API to collect sensor data from Netatmo sensors.
+The developer portal~\footnote{\url{https://dev.netatmo.com/apidocumentation}, \textit{last accessed: 01.09.2023}} offers a way to programmatically access all public sensor measurements via a REST API; however, each request has a limit on the spatial extend of the requested area for the current weather data. For historic data, the limit per request per sensor is 1024 data points. The API has a tight rate limit per application. For applications below 100 users, the rate limit is 2000 requests every hour and 200 requests every 10 seconds across all users, and 500 requests every hour and 50 requests every 10 seconds per user~\footnote{\url{https://dev.netatmo.com/guideline\#rate-limits}, \textit{last accessed: 06.08.2023}}. In this work, we use the REST API to collect sensor data from Netatmo sensors.
 
 \begin{figure}[htp]
     \centering
@@ -86,11 +86,11 @@ The developer portal~\footnote{\url{https://dev.netatmo.com/apidocumentation}} o
 
 \subsubsection{Quality Considerations}
 
-Netatmo sensors have a good measurement accuracy, however due to the compact design, an aluminium housing, poor ventilation due to the small case, no dedicated radiation screen resulting in a proneness to radiative errors, and therefore overall slow sensor-response time~\cite{meier2017crowdsourcing, buchau2018modelling}, Netatmo weather stations have a systematic bias that influences data quality. Due to the uniformity of Netatmo sensors, e.g., all sensors are built in the same way, this bias could be corrected in the \gls{qc} step, however this is not further explored in this work.
+Netatmo sensors have a good measurement accuracy; however, due to the compact design, an aluminium housing, poor ventilation due to the small case, no dedicated radiation screen resulting in a proneness to radiative errors, and therefore overall slow sensor-response time~\cite{meier2017crowdsourcing, buchau2018modelling}, Netatmo weather stations have a systematic bias that influences data quality. Due to the uniformity of Netatmo sensors, e.g., all sensors are built in the same way, this bias could be corrected in the \gls{qc} step; however, this is not further explored in this work.
 
 \subsection{Other Providers}
 
-Other sources for crowdsourced weather station data include \gls{wow}~\footnote{\url{https://wow.metoffice.gov.uk/}} and Weather Underground~\footnote{\url{https://www.wunderground.com/}}.
+Other sources for crowdsourced weather station data include \gls{wow}~\footnote{\url{https://wow.metoffice.gov.uk/}, \textit{last accessed: 01.09.2023}} and Weather Underground~\footnote{\url{https://www.wunderground.com/}, \textit{last accessed: 01.09.2023}}.
 \gls{wow} is a platform run by the UK Met Office, which is the UK's national weather service, and has a dense sensor coverage in the UK and the Netherlands as seen in figure~\ref{fig:wow sensor locations}.
 Weather Underground is a commercial weather service which also provides a crowdsourced weather station network. Unfortunately, Weather Underground only provides an API for users with a registered weather station or other bulk download options for historical data. The website would allow for manual download of historical data, but this is not feasible for the amount of data needed in this work.
 
@@ -119,7 +119,7 @@ The main advantages of the \gls{dwd} data are high data quality through referenc
 
 \subsubsection{Urban Climate Stations}
 
-Next to the official weather stations, the \gls{dwd} also operates urban weather stations, however there are currently only four stations in the following cities:
+Next to the official weather stations, the \gls{dwd} also operates urban weather stations; however, there are currently only four stations in the following cities:
 
 \begin{itemize}
     \item Berlin-Alexanderplatz, Berlin, Berlin
@@ -128,7 +128,7 @@ Next to the official weather stations, the \gls{dwd} also operates urban weather
     \item Dresden-Neustadt, Dresden, Sachsen
 \end{itemize}
 
-The number of urban weather stations is planned to be gradually extended to reach 10 stations with the locations being primarily determined by the measurement objectives such as determining a city's maximum \gls{uhii}~\footnote{\url{https://www.dwd.de/EN/climate\_environment/climateresearch/climate\_impact/urbanism/urban\_heat\_island/urbanheatisland\_node.html}, last accessed 12.07.2023}. Due to the low number of weather stations, their data is not used in this work.
+The number of urban weather stations is planned to be gradually extended to reach 10 stations with the locations being primarily determined by the measurement objectives such as determining a city's maximum \gls{uhii}~\footnote{\url{https://www.dwd.de/EN/climate\_environment/climateresearch/climate\_impact/urbanism/urban\_heat\_island/urbanheatisland\_node.html}, \textit{last accessed: 01.09.2023}}. Due to the low number of weather stations, their data is not used in this work.
 
 \subsubsection{Weather Radar}
 
@@ -140,7 +140,7 @@ Next to official weather services, many public and private institutions operate 
 
 \subsubsection{University of Hamburg – Meteorological Institute}
 
-In Hamburg the Meteorological Institute of the University of Hamburg addresses local climate concerns, supports many projects, and support decision makers relating climatic concerns. One of its projects is the Hamburg Urban Soil Climate Observatory (HUSCO) which operates multiple urban climate weather stations that measure \gls{ta} at 2m height as well as many other parameters including soil temperatures and conditions. In the current scope of this work we do not use data from this project, however it could be a good reference point especially in the context of 2m \gls{ta} for \gls{cuhi} detection and wanted to mention it here.
+In Hamburg the Meteorological Institute of the University of Hamburg addresses local climate concerns, supports many projects, and support decision makers relating climatic concerns. One of its projects is the Hamburg Urban Soil Climate Observatory (HUSCO) which operates multiple urban climate weather stations that measure \gls{ta} at 2m height as well as many other parameters including soil temperatures and conditions. In the current scope of this work we do not use data from this project; however, it could be a good reference point especially in the context of 2m \gls{ta} for \gls{cuhi} detection and wanted to mention it here.
 
 \begin{figure}[ht]
     \centering
@@ -151,7 +151,7 @@ In Hamburg the Meteorological Institute of the University of Hamburg addresses l
 
 \subsubsection{City of Stuttgart – Office for Environmental Protection}
 
-The Office for Environmental Protection of the city of Stuttgart has the goal of monitoring the climate in Stuttgart and the surrounding area and improve the living conditions of the citizens. The main focus of the office is on air quality, noise, and (urban) climate. It operates several weather stations in the city of Stuttgart, which are shown in Figure~\ref{fig:afu weather station locations}. The data from these stations is published directly on the website, a detailed quality assessment is given, and reference grade sensors are used. Unfortunately, the stations are mounted on top of building, e.g., 20-23m above ground, which is not ideal for measuring urban microclimates as the \gls{ta} is several degrees cooler than directly on the ground. This example underlines the importance of proper sensor placement and meta-data documentation. The data from the weather stations could be corrected using the \gls{dwd} reference station nearby, however uncorrected, the \gls{ta} cannot be used to validate the crowdsourced data. Due to the high placement, other measurements such as wind direction and speed could be used to get a good estimation of the overall climate in the city, however not on the microscale.
+The Office for Environmental Protection of the city of Stuttgart has the goal of monitoring the climate in Stuttgart and the surrounding area and improve the living conditions of the citizens. The main focus of the office is on air quality, noise, and (urban) climate. It operates several weather stations in the city of Stuttgart, which are shown in Figure~\ref{fig:afu weather station locations}. The data from these stations is published directly on the website, a detailed quality assessment is given, and reference grade sensors are used. Unfortunately, the stations are mounted on top of building, e.g., 20-23m above ground, which is not ideal for measuring urban microclimates as the \gls{ta} is several degrees cooler than directly on the ground. This example underlines the importance of proper sensor placement and meta-data documentation. The data from the weather stations could be corrected using the \gls{dwd} reference station nearby; however, uncorrected, the \gls{ta} cannot be used to validate the crowdsourced data. Due to the high placement, other measurements such as wind direction and speed could be used to get a good estimation of the overall climate in the city; however, not on the microscale.
 
 \section{Remote Sensing Data Providers}
 
@@ -160,7 +160,7 @@ The Office for Environmental Protection of the city of Stuttgart has the goal of
 
 In comparison to stationary sensors that are installed directly in the environment they are observing, remote sensing describes the process of observing a target environment from afar~\cite{campbell2011introduction}. In climatology, remote sensing is used to collect meteorological data via satellites, planes, or balloons by either capturing image data that can be used to identify things like cloud and land coverage, by measuring passive radiation, or by actively sending out microwaves or using LiDAR to detect features such as \gls{lst}. Remote sensing comes with its own set of advantages and challenges.\\
 The major upside of sensors moving way above ground is the high spatial coverage, that allows for meso- and planetary-scale analysis of weather phenomena. Another upside is the great data availability, as many satellite providers (e.g., NASA, ESA, etc.) publish their satellite data. This creates many research opportunities and services directly relying on these measurements.\\
-Remote sensing also comes with certain downsides. The primary downside is the low spatio-temporal resolutions. Weather satellites usually are not orbit-stationary and move around earth on a predetermined orbit. Consequently, satellites only pass over each individual area a couple times a day, making real-time applications for currently unobserved areas impossible. Additionally, the spatial resolution can be too low for micro-/local-scale analysis, with typical \gls{lst} resolution spanning from 1 km$^{2}$ to tens or even hundreds of km$^{2}$ per data point/grid field. In the atmosphere, there is also a lot of environmental noise, like radiation, that can have a negative influence on the measurement accuracy. Another disturbing factor can be clouds or other types of particles like rain that absorb radiation/microwaves sent from the sensors, making measuring under cloudy/rainy conditions either impossible. There exist methods to estimate values instead, relying on outgoing radiation from the surface, however these approaches are usually less accurate. These restrictions highly depend on the sensor used, as different sensors use different sensors use different technologies, e.g., microwaves with different wave lengths or higher resolution sensors.
+Remote sensing also comes with certain downsides. The primary downside is the low spatio-temporal resolutions. Weather satellites usually are not orbit-stationary and move around earth on a predetermined orbit. Consequently, satellites only pass over each individual area a couple times a day, making real-time applications for currently unobserved areas impossible. Additionally, the spatial resolution can be too low for micro-/local-scale analysis, with typical \gls{lst} resolution spanning from 1 km$^{2}$ to tens or even hundreds of km$^{2}$ per data point/grid field. In the atmosphere, there is also a lot of environmental noise, like radiation, that can have a negative influence on the measurement accuracy. Another disturbing factor can be clouds or other types of particles like rain that absorb radiation/microwaves sent from the sensors, making measuring under cloudy/rainy conditions either impossible. There exist methods to estimate values instead, relying on outgoing radiation from the surface; however, these approaches are usually less accurate. These restrictions highly depend on the sensor used, as different sensors use different sensors use different technologies, e.g., microwaves with different wave lengths or higher resolution sensors.
 
 \subsection{Google Earth Engine}
 
@@ -170,13 +170,13 @@ Remote sensing also comes with certain downsides. The primary downside is the lo
 \label{sec:quality control}
 
 \gls{qc} is an essential step in the process of data analysis and preparation. The goal is to identify and remove outliers in the data that are due to placement errors of sensors, sensor malfunctions, sensor inaccuracies or other errors. In the context of \gls{pws}, weather stations are placed and maintained by non-professionals, making \gls{qc} even more important. One of the main challenges in the context of (hyper-) local urban \gls{ta} data is to not flag data as outliers that is representative of the local climate in case of extreme temperature, e.g., heat islands, and at the same time identify erroneous or wrongly placed sensors, e.g., too close to walls, in direct sunlight, indoors, etc. Additionally, current \gls{pws} networks do not track sufficient metadata on the sensor placement, e.g., sensor height, which also plays an important role in protecting the privacy of citizens and not exposing too accurate sensor locations.\\
-Due to the popularity of Netatmo weather station data in research due to high spatio-temporal resolution, there are several software libraries available that help simplify and automate the \gls{qc} process. These tools were primarily developed for Netatmo temperature data, however CrowdQC and TITAN can also be used for other nearly-normally distributed data sources~\cite{hahn2022observations}. The following tools are available:
+Due to the popularity of Netatmo weather station data in research due to high spatio-temporal resolution, there are several software libraries available that help simplify and automate the \gls{qc} process. These tools were primarily developed for Netatmo temperature data; however, CrowdQC and TITAN can also be used for other nearly-normally distributed data sources~\cite{hahn2022observations}. The following tools are available:
 
 \begin{itemize}
     \item CrowdQC (R package~\footnote{\url{https://doi.org/10.14279/depositonce-6740.3}})
-    \item CrowdQC+~\cite{fenner2021crowdqc+} (R package~\footnote{\url{https://github.com/dafenner/CrowdQCplus}})
-    \item TITAN (R package~\footnote{\url{https://github.com/metno/TITAN}})
-    \item NetatmoQC (Python 3 package~\footnote{\url{https://source.coderefinery.org/iOBS/wp2/task-2-3/netatmoqc}})
+    \item CrowdQC+~\cite{fenner2021crowdqc+} (R package~\footnote{\url{https://github.com/dafenner/CrowdQCplus}, \textit{last accessed: 01.09.2023}})
+    \item TITAN (R package~\footnote{\url{https://github.com/metno/TITAN}, \textit{last accessed: 01.09.2023}})
+    \item NetatmoQC (Python 3 package~\footnote{\url{https://source.coderefinery.org/iOBS/wp2/task-2-3/netatmoqc}, \textit{last accessed: 01.09.2023}})
 \end{itemize}
 
 In this work, CrowdQC+ is used for \gls{qc} as it offers improvements and bug fixes compared to CrowdQC. It's an open-source software library written in R, a popular programming language for statistical applications. The data needs to be in the following format:
@@ -193,7 +193,7 @@ In this work, CrowdQC+ is used for \gls{qc} as it offers improvements and bug fi
 The CrowdQC+ library implements the following required steps of \gls{qc}:\ Metadata Check, Distribution Check, Data Validity, Temporal Correlation, Spatial Buddy Check. There are also the following optional steps available, that are currently not used: Temporal Interpolation, Daily Validity, Validity in Time Period, and Correction for Time Constant.
 The steps used in this work are shown and explained in Table~\ref{tab: qc_steps}, including the number of data and stations available after each step.\\
 In their own study, CrowdQC+ kept 47.1\% and 69.2\% of data after steps m1-5, and only 20.7\% and 29.5\% after steps o1-o3, for the cities Amsterdam and Toulouse respectively~\cite{fenner2021crowdqc+}, given default parameters. In that setting, CrowdQC kept more data with 41.0\% in Amsterdam and 54.9\% in Toulouse. In this work, CrowdQC+ is used with default parameters excluding height validation, as this data was not available for almost all sensors. Additionally, only the first 5 required steps are used, as the optional steps are not needed for the interpolation. The input data for CrowdQC+ also needs have the same temporal resolution and intervals.\\
-In this study, we use a 10 min interval to have a high temporal resolution and use the default parameters except excluding the heigh check due to the missing values. Important to note here, that in the following, only the \gls{ta} is validated and no other measurements such as pressure or humidity. CrowdQC+ could be used for other approximately normally distributed features, however there hasn't been more specific research in this direction. We assume that a station that seems to be setup correctly and produces good \gls{ta} measurements, also captures the other measurements correctly for simplicity reasons.
+In this study, we use a 10 min interval to have a high temporal resolution and use the default parameters except excluding the heigh check due to the missing values. Important to note here, that in the following, only the \gls{ta} is validated and no other measurements such as pressure or humidity. CrowdQC+ could be used for other approximately normally distributed features; however, there hasn't been more specific research in this direction. We assume that a station that seems to be setup correctly and produces good \gls{ta} measurements, also captures the other measurements correctly for simplicity reasons.
 
 \begin{figure}[htp]
     \centering
@@ -267,7 +267,7 @@ The input features are a combination of sensor readings from \gls{pws} networks 
 \subsection{Feature Engineering Pipelines and Automation}
 
 Before looking at available features and features used in related work, we quickly return to the topic of Smart City and how to integrate different data sources and automate the feature engineering process. A popular solution for production-ready \gls{ml} applications is the use of pipelines that streamline the data pre-processing, feature engineering, potential re-training, and prediction processes. Luckily, all data-sources previously mentioned have APIs or offer download options to get access to recent sensor readings. Next to the \gls{ta} readings which can be sourced from Netatmo, Sensor.Community, and/or the \gls{dwd}, other features are also important to get good prediction, as suggested by Zumwald et al.\ where \gls{ta} at 2m only explained 33\% of the prediction~\cite{zumwald2021mapping}, such as remote sensing information, that for example could be sourced from \gls{gee}.\\
-The actual sensor readings come directly from the sensing layer, in which different external sources could be integrated via API, so that virtual sensors are created that are directly available for example via a overlay network such as SkipNet. In this work, we do not take advantage of other solutions but instead source data directly via API or archives to make a historical data analysis instead of testing real-time applications. After transporting this information via the transportation layer to the data-management layer, the service layer can consume the data streams. An \gls{ta} interpolation service could then be placed in the service layer for areal interpolation. This service could then be used for areal interpolation to provide fine-granular \gls{ta} maps/grids. The use-case of single station interpolation, for example in combination with moving sensors might be better located in the sensing layer as a virtual sensor, however challenges would be the dependency on other sensors which might have different sampling intervals.\\
+The actual sensor readings come directly from the sensing layer, in which different external sources could be integrated via API, so that virtual sensors are created that are directly available for example via a overlay network such as SkipNet. In this work, we do not take advantage of other solutions but instead source data directly via API or archives to make a historical data analysis instead of testing real-time applications. After transporting this information via the transportation layer to the data-management layer, the service layer can consume the data streams. An \gls{ta} interpolation service could then be placed in the service layer for areal interpolation. This service could then be used for areal interpolation to provide fine-granular \gls{ta} maps/grids. The use-case of single station interpolation, for example in combination with moving sensors might be better located in the sensing layer as a virtual sensor; however, challenges would be the dependency on other sensors which might have different sampling intervals.\\
 In this work, we only take advantage of sklearn pipelines~\footnote{\url{https://scikit-learn.org/stable/modules/generated/sklearn.pipeline.Pipeline.html}, \textit{last accessed: 27.08.2023}} in a limited fashion for the actual training and testing process to automatically include scaling and cross-validation and rely on many manual steps to download the data, do pre-processing and \gls{qc}, and finally extract features and train \gls{ml} models.
 
 \subsection{Feature Overview}
@@ -276,7 +276,7 @@ In the following sections, we look at available features for the use-case of \gl
 
 \subsubsection{Essential Climate Variables}
 
-\gls{ecv}s are a list of currently 50 variables that are proposed by the \gls{wmo} to measure climate and climate change. The \gls{wmo} regularly publishes updates on which climate variables to use and how to measure them~\cite{wmo2018guide}. \gls{ecv}s are generally more focused on measuring climate on a global scale, however they also contain many variables that are relevant for urban microclimate, such as \gls{ta} and land cover. There are three categories of \gls{ecv}s, namely Atmosphere, Land, and Ocean. And overview of the \gls{ecv}s can be found online~\footnote{\url{https://gcos.wmo.int/en/essential-climate-variables/table}, \textit{last accessed: 08.08.2023}}.\\
+\gls{ecv}s are a list of currently 50 variables that are proposed by the \gls{wmo} to measure climate and climate change. The \gls{wmo} regularly publishes updates on which climate variables to use and how to measure them~\cite{wmo2018guide}. \gls{ecv}s are generally more focused on measuring climate on a global scale; however, they also contain many variables that are relevant for urban microclimate, such as \gls{ta} and land cover. There are three categories of \gls{ecv}s, namely Atmosphere, Land, and Ocean. And overview of the \gls{ecv}s can be found online~\footnote{\url{https://gcos.wmo.int/en/essential-climate-variables/table}, \textit{last accessed: 08.08.2023}}.\\
 Next to official \gls{wmo} suggestions, other institutions such as the Integrated Climate Data Centre (ICDC) from the University of Hamburg (UHH) also suggest variables to measure climate~\footnote{\url{https://www.cen.uni-hamburg.de/icdc/data.html}, \textit{last accessed: 27.08.2023}}. Table~\ref{tab:icdc datset parameters} shows the available parameters for which datasets are available.
 
 \begin{table}[ht]
@@ -448,7 +448,7 @@ In the following, we describe which features are used in this work for our two u
     \label{tab:features this work}
 \end{table}
 
-Air temperature, relative humidity, atmospheric pressure, precipitation, and wind was sourced from Netatmo and Sensor.Community \gls{pws} networks as well as the \gls{dwd} weather stations as reference data.
+\gls{ta}, relative humidity, atmospheric pressure, precipitation, and wind was sourced from Netatmo and Sensor.Community \gls{pws} networks as well as the \gls{dwd} weather stations as reference data.
 All remote sensing data acquired in this work was processed using the \gls{gee}~\cite{gorelick2017google} as it offers a unified way of accessing data and offers enhanced processing capabilities that are especially important when dealing with these large datasets that can grow as large as several hundred terabytes. The following datasets have been used and downloaded from the \gls{gee} platform:
 
 \begin{itemize}
